unpackaged/main/default/objects/CEGID_Discount__c/CEGID_Discount__c.object-meta.xml
<CustomObject>
    <label>CEGID Discount</label>
    <nameField>
        <displayFormat>DISC-{000000000}</displayFormat>
        <label>CEGID Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEGID Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>