unpackaged/main/default/objects/CEGID_Discount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CEGID Discounts</relationshipLabel>
    <relationshipName>CEGID_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>