unpackaged/main/default/objects/CEGID_Discount__c/fields/Account_Partner_Contract__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_Contract__c</fullName>
    <label>Account Partner Contract</label>
    <referenceTo>Account_Partner_Contract__c</referenceTo>
    <relationshipLabel>CEGID Discounts</relationshipLabel>
    <relationshipName>CEGID_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>