unpackaged/main/default/objects/CEGID_Discount__c/fields/Account_Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Partnership_Status__c</fullName>
    <label>Account Partnership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partnership_Status</valueSetName>
    </valueSet>
</CustomField>