unpackaged/main/default/objects/CEGID_Discount__c/fields/HasSalesPurpose__c.field-meta.xml
<CustomField>
    <fullName>HasSalesPurpose__c</fullName>
    <formula>IF(ISBLANK(TEXT( Sales_Purpose__c )),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasSalesPurpose</label>
    <type>Checkbox</type>
</CustomField>