unpackaged/main/default/objects/CEGID_Discount__c/fields/HasStructureLevel2__c.field-meta.xml
<CustomField>
    <fullName>HasStructureLevel2__c</fullName>
    <formula>IF(ISBLANK(TEXT(Structure_Level_2__c)),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasStructureLevel2</label>
    <type>Checkbox</type>
</CustomField>