unpackaged/main/default/objects/CEGID_Discount__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CEGID Discounts</relationshipLabel>
    <relationshipName>CEGID_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>