unpackaged/main/default/objects/CEGID_Discount__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>CEGID Discounts</relationshipLabel>
    <relationshipName>CEGID_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>