unpackaged/main/default/objects/CEGID_Discount__c/fields/Product_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Name__c</fullName>
    <formula>IF(ISBLANK(Product__c), Product_Line__r.Name ,Product__r.Product_Line__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Name</label>
    <type>Text</type>
</CustomField>