unpackaged/main/default/objects/CEGID_Discount__c/fields/Product_s_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_s_Product_Line__c</fullName>
    <formula>Product__r.Product_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product's Product Line</label>
    <type>Text</type>
</CustomField>