unpackaged/main/default/objects/CEGID_Discount__c/fields/Structure_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Structure_Level_1__c</fullName>
    <label>Structure Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StructureLevel1</valueSetName>
    </valueSet>
</CustomField>