unpackaged/main/default/objects/CEGID_Discount__c/fields/Structure_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Structure_Level_2__c</fullName>
    <label>Structure Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StructureLevel2</valueSetName>
    </valueSet>
</CustomField>