unpackaged/main/default/objects/CEGID_Discount__c/fields/Structure_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Structure_Level_3__c</fullName>
    <label>Structure Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StructureLevel3</valueSetName>
    </valueSet>
</CustomField>