unpackaged/main/default/objects/CEGID_Discount__c/fields/Tech_RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>Tech_RecordTypeName__c</fullName>
    <formula>IF(RecordType.DeveloperName = 'Performance','Performance','Status')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech RecordTypeName</label>
    <type>Text</type>
</CustomField>