unpackaged/main/default/objects/CEGID_Discount__c/fields/TECH_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>TECH_Reference_Number__c</fullName>
    <formula>Product__r.Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Reference Number</label>
    <type>Text</type>
</CustomField>