unpackaged/main/default/objects/CEGID_Discount__c/recordTypes/Performance.recordType-meta.xml
<RecordType>
    <fullName>Performance</fullName>
    <active>true</active>
    <label>Performance</label>
</RecordType>