unpackaged/main/default/objects/CEGID_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Partner_Discount__c</columns>
    <columns>Product_Line_Name__c</columns>
    <columns>Product__c</columns>
    <columns>End_Date__c</columns>
    <columns>Structure_Level_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>contains</operation>
        <value>XRP</value>
    </filters>
    <label>All</label>
</ListView>